--- a/www/index.html
+++ b/www/index.html
@@ -13,13 +13,9 @@
     <script src="js/app.js"></script>
     <script src="js/pageinit.js"></script>
     <script src="js/cssua.min.js"></script>
-   <script src="bower_components/onsenui/build/js/onsenui.js"></script>
     <script type="text/javascript" charset="utf-8" src="components/loader.js"></script>
     <link rel="stylesheet" href="components/loader.css">
     <link rel="stylesheet" href="css/style.css">
-    <script>
-        ons.bootstrap();
-    </script>
 
 </head>
 <body>
@@ -34,25 +30,21 @@
     }
     </script>
 
-//メニューページ
-<ons-navigator  id="NatNavi" var="NatNavi" page="map.html">
-  <ons-toolbar>
-        <div class="left">
-            <ons-toolbar-button modifier="light" onclick="NatNavi.pushPage('menu.html')">
-            <ons-icon icon="ion-navicon">
-            </ons-icon>
-            </ons-toolbar-button>
-         </div>
-   
-        <div class="right">
-            <ons-back-button>
-              閉じる
-            </ons-back-button>
-        </div>
-    </ons-toolbar>
- 
+<ons-sliding-menu var="app.menu" main-page="map.html" menu-page="menu.html" max-slide-distance="200px" type="reveal" side="left">
+</ons-sliding-menu>
 
-    </ons-navigator>
+<ons-page modifier="menu-page">
+  <ons-page>
+    <!-- menu page's contents -->
+  </ons-page>
+</ons-template>
+
+
+
+    <ons-navigator id="NatNavi" page="main.html"></ons-navigator>
+    
+    
+
 
 </body>
 </html>
