--- a/www/map.html
+++ b/www/map.html
@@ -1,6 +1,9 @@
 <ons-page>
-  
-　　　 
+    <ons-toolbar>
+        <div class="center">NATORIST開発中</div>
+        <div class="left"><ons-back-button>戻る</ons-back-button></div>
+    </ons-toolbar>
+
     <div>
         <section style="padding: 1px">
             <ons-button modifier="large" onclick="save_geopoint()">マーカー登録</ons-button>
@@ -15,9 +18,8 @@
                 <div id="canvas" style="width:100%; height: 300px"></div>
         </section>
    </div>
-
-<!-- オプション-->
- <div>
+  
+  <div>
   <ul id="nav">
   <li>
  <a href="https://twitter.com/share" class="twitter-share-button"
@@ -31,7 +33,5 @@ SNS
   </ul>
   
   </div>
-
- </ons-page>
- 
+</ons-page>
 
