--- a/www/menu.html
+++ b/www/menu.html
@@ -1,30 +1,30 @@
 //メニュー選択画面
-<!doctype html>
 
-<ons-page>
-   <ons-tool-bar>
-   <div class="center">
-   メニュー
-   </div>
-   </ons-tool-bar>
+<ons-page modifier="menu-page">
+    <ons-toolbar modifier="transparent">
+        <div class="right">
+            <ons-toolbar-button class="menu-close" ng-click="menu.close()">
+                </ons-icon>閉じる
+            </ons-toolbar-button>
+        </div>
+    </ons-toolbar>
 
- <div>
-    <ons-list　var="menu">
-     
-        <ons-list-item class="menu-item" onclick="menu.pushPage('map.html')"  modifier="chevron">
+    <ons-list class="menu-list">
+        <ons-list-item class="menu-item" onclick="menu.setAbovePage('map.html', {closeMenu: true})">
             <ons-icon icon="ion-map"></ons-icon>
             マップ
         </ons-list-item>
 
-        <ons-list-item class="menu-item" onclick="menu.pushPage('coupon.html')"  modifier="chevron">
+        <ons-list-item class="menu-item" onclick="menu.setAbovePage('coupon.html', {closeMenu: true})">
             <ons-icon icon="ion-information"></ons-icon>
             クーポン
         </ons-list-item>
 
-        <ons-list-item class="menu-item" onclick="menu.pushPage('setting.html')"  modifier="chevron">
+        <ons-list-item class="menu-item" onclick="menu.setAbovePage('setting.html', {closeMenu: true})">
             <ons-icon icon="ion-cog"></ons-icon>
             設定
         </ons-list-item>
+
+
     </ons-list>
-    </div>
 </ons-page>
