--- a/www/public.html
+++ b/www/public.html
@@ -2,6 +2,11 @@
     <ons-toolbar>
         <div class="left"><ons-back-button>戻る</ons-back-button></div>
         <div class="center">公共機関</div>
+         <div class="right">
+          <ons-toolbar-button onclick="fn.open()">
+            <ons-icon icon="ion-navicon, material:md-menu"></ons-icon>
+          </ons-toolbar-button>
+        </div>
     </ons-toolbar>
     <div>
         <section>
