--- a/www/event.html
+++ b/www/event.html
@@ -1,7 +1,7 @@
-<ons-page id="coupon-page">
+<ons-page id="event-page">
     <ons-toolbar>
         <div class="left"><ons-back-button>戻る</ons-back-button></div>
-        <div class="center">クーポン情報</div>
+        <div class="center">イベント情報</div>
          <div class="right">
           <ons-toolbar-button onclick="fn.open()">
             <ons-icon icon="ion-navicon, material:md-menu"></ons-icon>
