--- a/www/index.html
+++ b/www/index.html
@@ -13,14 +13,28 @@
     <script src="js/app.js"></script>
     <script src="js/pageinit.js"></script>
     <script src="js/cssua.min.js"></script>
-   <script src="bower_components/onsenui/build/js/onsenui.js"></script>
     <script type="text/javascript" charset="utf-8" src="components/loader.js"></script>
     <link rel="stylesheet" href="components/loader.css">
     <link rel="stylesheet" href="css/style.css">
-    <script>
-        ons.bootstrap();
-    </script>
+  <script>
+    ons.ready(function() {
+      console.log("Onsen UI is ready!");
+    });
 
+    window.fn = {};
+    window.fn.open = function() {
+      var menu = document.getElementById('menu');
+      menu.open();
+    };
+    window.fn.load = function(page) {
+      var content = document.getElementById('content');
+      var menu = document.getElementById('menu');
+      content
+        .load(page)
+        .then(menu.close.bind(menu));
+    };
+
+  </script>
 </head>
 <body>
     <script type="text/javascript">
@@ -34,25 +48,39 @@
     }
     </script>
 
-//メニューページ
-<ons-navigator  id="NatNavi" var="NatNavi" page="map.html">
-  <ons-toolbar>
-        <div class="left">
-            <ons-toolbar-button modifier="light" onclick="NatNavi.pushPage('menu.html')">
-            <ons-icon icon="ion-navicon">
-            </ons-icon>
-            </ons-toolbar-button>
-         </div>
-   
-        <div class="right">
-            <ons-back-button>
-              閉じる
-            </ons-back-button>
-        </div>
-    </ons-toolbar>
- 
+<ons-splitter>
+    <ons-splitter-side id="menu" side="left" width="220px" collapse swipeable>
+      <ons-page>
+        <ons-list>
+          <ons-list-item onclick="fn.load('main.html')" tappable>
+           main
+          </ons-list-item>
+          <ons-list-item onclick="fn.load('map.html')" tappable>
+            map
+          </ons-list-item>
+           <ons-list-item onclick="fn.load('coupon.html')" tappable>
+           coupon
+          </ons-list-item>
+           <ons-list-item onclick="fn.load('event.html')" tappable>
+           event
+          </ons-list-item>
+          <ons-list-item onclick="fn.load('public.html')" tappable>
+            public
+          </ons-list-item>
+          <ons-list-item onclick="fn.load('setting.html')" tappable>
+           setting
+          </ons-list-item>
+        </ons-list>
+      </ons-page>
+    </ons-splitter-side>
+  <ons-splitter-content id="content" page="main.html"></ons-splitter-content> 
+  </ons-splitter>
 
-    </ons-navigator>
+<!--<ons-navigator id="NatNavi" page="main.html"></ons-navigator>-->
+    
+
+
+
 
 </body>
 </html>
