--- a/www/map.html
+++ b/www/map.html
@@ -1,13 +1,15 @@
 <ons-page>
-  
-　　　 
+    <ons-toolbar>
+        <div class="center">NATORIST開発中</div>
+        <div class="left"><ons-back-button>戻る</ons-back-button></div>
+         <div class="right">
+          <ons-toolbar-button onclick="fn.open()">
+            <ons-icon icon="ion-navicon, material:md-menu"></ons-icon>
+          </ons-toolbar-button>
+        </div>
+    </ons-toolbar>
+
     <div>
-        <section style="padding: 1px">
-            <ons-button modifier="large" onclick="save_geopoint()">マーカー登録</ons-button>
-        </section>
-        <section style="padding: 1px">
-            <ons-button modifier="large" onclick ="find_geopoint()">マーカーチェック</ons-button>
-        </section>
         <section style="padding: 1px">
             <ons-button modifier="large" onclick ="current_geopoint()">現在位置に移動</ons-button>
         </section>
@@ -15,9 +17,8 @@
                 <div id="canvas" style="width:100%; height: 300px"></div>
         </section>
    </div>
-
-<!-- オプション-->
- <div>
+  
+  <div>
   <ul id="nav">
   <li>
  <a href="https://twitter.com/share" class="twitter-share-button"
@@ -31,7 +32,5 @@ SNS
   </ul>
   
   </div>
-
- </ons-page>
- 
+</ons-page>
 
