--- a/www/coupon.html
+++ b/www/coupon.html
@@ -1,19 +1,18 @@
-<ons-page id="coupon-page">
-    <ons-toolbar>
-        <div class="left"><ons-back-button>戻る</ons-back-button></div>
-        <div class="center">クーポン情報</div>
 
-         <div class="right">
-          <ons-toolbar-button onclick="fn.open()">
-            <ons-icon icon="ion-navicon, material:md-menu"></ons-icon>
-          </ons-toolbar-button>
-        </div>
+<form action="クーポンの送信先" method="post">
 
+<h1>クーポンを選択してください。</h1>
 
-    </ons-toolbar>
-    <div style="text-align: center">
-        <h1 id="info-title">タイトル</h1>
-        <image id="info-img" src=""></image>
-        <h2 id="info-detail">説明文</h2>
-    </div>
-</ons-page>
+    <p>
+    <select name="coupon">
+    <option value="coupon1">クーポン1</option>
+    <option value="coupon2">クーポン2</option>
+    <option value="coupon3">クーポン3</option>
+    <option value="coupon4">クーポン4</option>
+    <option value="coupon5">クーポン5</option>
+    </select>
+    </p>
+
+<p><input type="submit" value="送信"></p>
+
+</form>
