--- a/www/map.html
+++ b/www/map.html
@@ -1,4 +1,4 @@
-<ons-page>
+<ons-page id="map-page">
     <ons-toolbar>
         <div class="center">NATORIST開発中</div>
         <div class="left"><ons-back-button>戻る</ons-back-button></div>
@@ -12,9 +12,24 @@
     </ons-toolbar>
 
     <div>
-        <section style="padding: 1px">
-            <ons-button modifier="large" onclick ="current_geopoint()">現在位置に移動</ons-button>
-        </section>
+        <ons-row>
+        <ons-col width="40%">
+            <section style="padding: 1px">
+            <ons-button  id="tracking_btn" modifier="large" onclick ="tracking()">表示切替</ons-button>
+            </section>
+        </ons-col>
+        <ons-col>
+            <section style="padding: 1px">
+                <img id="compass" src="img/arrow.png">
+            </section>
+        </ons-col>
+        <ons-col width="40%">
+            <section style="padding: 1px">
+            <div id="tracking_mode">現在地非表示</div>
+            </section>
+        </ons-col>
+        </ons-row>
+
         <section>
                 <div id="canvas" style="width:100%; height: 300px"></div>
         </section>
