--- a/www/map.html
+++ b/www/map.html
@@ -24,7 +24,7 @@
         </div>
         
           <div class="right">
-        <ons-back-button >戻る</ons-back-button>
+      <ons-back-button>戻る</ons-back-button>
         </div>
         
 
@@ -32,12 +32,34 @@
     </ons-toolbar>
 
     <div>
-     <section style="padding: 1px">
-            <ons-button modifier="large" onclick ="find_geopoint()">観光地</ons-button>
-        </section>
-        <section style="padding: 1px">
-            <ons-button modifier="large" onclick ="current_geopoint()">現在位置に移動</ons-button>
-        </section>
+     <ons-row>
+        <ons-col width="40%">
+            <section style="padding: 1px">
+            <ons-button  id="tracking_btn" modifier="large" onclick ="tracking()">表示切替</ons-button>
+            </section>
+        </ons-col>
+        <ons-col>
+            <section style="padding: 1px">
+                <img id="compass" src="img/arrow.png">
+            </section>
+        </ons-col>
+        <ons-col width="40%">
+            <section style="padding: 1px">
+            <div id="tracking_mode">現在地非表示</div>
+            </section>
+        </ons-col>
+        </ons-row>
+    <p>
+            <form name="chbox">
+            <input type="checkbox" name="select" value="イベント" >イベント
+<input type="checkbox" name="select" value="観光">観光
+<input type="checkbox"  name="select"  value="クーポン">クーポン
+<input type="checkbox" name="select"   value="避難所">避難所
+<button class="button1" type="button"  value="確認" onclick="Checkbox()">確認</button>
+</form>
+
+
+</p>
         <section>
                 <div id="canvas" style="width:100%; height: 400px"></div>
         </section>
