--- a/www/map.html
+++ b/www/map.html
@@ -1,6 +1,4 @@
-
-<ons-page id="map-page">
-
+<ons-page>
  <script type="text/javascript">
     // Geolocation APIに対応している
     if (navigator.geolocation) {
@@ -11,6 +9,8 @@
       alert("この端末では位置情報が取得できません");
     }
     </script>
+  
+
   
     <ons-toolbar>
         <div class="center">NATORIST開発中</div>
@@ -31,9 +31,7 @@
     </ons-toolbar>
 
     <div>
-
-        <ons-row>
-
+     <ons-row>
         <ons-col width="40%">
             <section style="padding: 1px">
             <ons-button  id="tracking_btn" modifier="large" onclick ="tracking()">表示切替</ons-button>
@@ -50,7 +48,6 @@
             </section>
         </ons-col>
         </ons-row>
-
     <p>
             <form name="chbox">
             <input type="checkbox" name="select" value="イベント" >イベント
@@ -62,10 +59,6 @@
 
 
 </p>
-
-      
-
-
         <section>
                 <div id="canvas" style="width:100%; height: 400px"></div>
         </section>
