--- a/www/info.html
+++ b/www/info.html
@@ -1,4 +1,4 @@
-<ons-page id="info-page">
+<ons-page id="coupon_info-page">
 
     <ons-toolbar>
         <div class="left"><ons-back-button>戻る</ons-back-button></div>
@@ -6,7 +6,7 @@
     </ons-toolbar>
     <div style="text-align: center">
         <h1 id="info-title">タイトル</h1>
-        <image id="info-img" src=""></image>
+        <image id="info-img" src="" class="contain"></image>
         <h2 id="info-detail">説明文</h2>
     </div>
 </ons-page>
